# gdcdictionary

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  .travis.yml  .yamllint  CONTRIBUTING.md  Jenkinsfile  MANIFEST.in  NOTICE  NOTICE.txt  README.md  __schema.yaml  __system_field.yaml  design_notes.md  dev-requirements.in  dev-requirements.txt  dev-requirements2.txt  dev-requirements3.txt  docker-compose-ci.yaml  psql-users.sh  pull_request_template.md  pyproject.toml  requirements.txt  requirements2.txt  requirements3.txt  setup.cfg  setup.py  tox.ini
AlignedSeq/: __schema.yaml
AlignedSeq/AlignedBAM/: __schema.yaml
AlignmentWorkflow/: __schema.yaml
Aliquot/: __schema.yaml
Analyte/: __schema.yaml
Case/: __schema.yaml
Diagnosis/: __schema.yaml
Exposure/: __schema.yaml
Portion/: __schema.yaml
Program/: __schema.yaml
Project/: __schema.yaml
RefGenome/: __schema.yaml
RefGenome/RefGenomeChr/: __schema.yaml
SSM_Snv/: __schema.yaml
SSM_Snv/SSM_SNV/: __schema.yaml
Sample/: __schema.yaml
Slide/: __schema.yaml
UnalignedSeq/: __schema.yaml
UnalignedSeq/FASTQ/: __schema.yaml
aligned_seq/aligned_bam/: __schema.yaml
alignment_workflow/: __schema.yaml
analyte/: __schema.yaml
case/: __schema.yaml
diagnosis/: __schema.yaml
examples/invalid/: aliquot_invalid_2.json  aliquot_invalid_3.json  expression_analysis_workflow.json  secondary_expression_analysis.json
examples/valid/: aligned_reads.json  aliquot.json  analyte.json  biospecimen_supplement.json  clinical_supplement.json  copy_number_estimate.json  copy_number_segment.json  copy_number_variation_workflow.json  diagnosis.json  file.json  genomic_profile_harmonization_workflow.json  program.json  (+12 more)
exposure/: __schema.yaml
gdc_dictionary/: __system_fields.yaml
gdcdictionary/: Jenkinsfile  __init__.py  schema_test.py
jsonschema/: aliquot.yaml  analyte.yaml  case.yaml  definitions.yaml  metaschema.yaml  portion.yaml  program.yaml  project.yaml  sample.yaml  schema.json  schema.yaml  schema_test.py  schema_with_projects_via_oneOf.yaml
portion/: __schema.yaml
program/: __schema.yaml
project/: __schema.yaml
ref_genome/: __schema.yaml
sample/: __schema.yaml
sandbox/: __schema.yaml  __system_fields.yaml
schemas/: README.md  aliquot.yaml  analyte.yaml  annotation.yaml  archive.yaml  case.yaml  center.yaml  clinical.yaml  data_format.yaml  data_subtype.yaml  data_type.yaml  definitions.yaml  experimental_strategy.yaml  file.yaml  metaschema.yaml  platform.yaml  portion.yaml  program.yaml  project.yaml  publication.yaml  sample.yaml  slide.yaml  tag.yaml  tissue_source_site.yaml
ssm_snv/: __schema.yaml
tests/: conftest.py  datamodel_test.py  json_validation_test.py  schema_test.py  utils.py
treatment/: __schema.yaml
unaligned_seq/: __schema.yaml
(+1223 files in other folders)
