[metadata]
name = gdcdictionary
description = The Genomic Data Commons’ (GDC) data dictionary
long_description = file: README.md
long_description_content_type = text/markdown
author = Gdc feature team
author_email = gdc_dev_questions-aaaaae2lhsbell56tlvh3upgoq@cdis.slack.com
license = Apache Software License 2.0
license_file = LICENSE
url = https://github.com/NCI-GDC/gdcdictionary
keywords = python3 gdcdictionary
classifiers =
    Programming Language :: PythonLicense :: OSI Approved :: Apache Software License
    Operating System :: Unix
    Operating System :: POSIX :: Linux
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = True
packages = find:
package_dir =
    =src
python_requires = >=3.6
include_package_data = True
install_requires =
    PyYAML<7
    jsonschema<4
    attrs<21


[options.packages.find]
where = src

[options.extras_require]
changelog =
    towncrier
dev =
    coverage[toml]
    pytest
    pytest-cov>=2.7.1,<2.12
lint =
    mypy
    pre-commit
